--- a/_config.yml
+++ b/_config.yml
@@ -19,20 +19,27 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Christian Matt's Homepage
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+
+description:
+  >- 
+  Christian Matt is Professor and Co-director of the Institute of Information Systems at the University of Bern.
+  As an expert for digital transformation and artificial intelligence
+
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "christianmatt.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ""
-github_username:  "christian-matt"
+
+url: "https://christianmatt.com" # the base hostname & protocol for your site, e.g. http://example.com
+
+github_username: christian-matt
+
+author:
+  name: Christian Matt
+  url: https://christianmatt.com
 
 # Build settings
-# theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 
 # Stylesheet settings (sass)
@@ -48,7 +55,7 @@ sass:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
@@ -59,3 +66,5 @@ sass:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+  - README.md
+  - design.svg
