Update content and optimize integration of links.

--- a/_config.yml
+++ b/_config.yml
@@ -22,10 +22,10 @@ title: Christian Matt
 
 description:
   >-
-  Christian Matt is Professor and Co-director of the Institute of Information Systems at the University of Bern. 
-  As an expert for Digital Transformation, Digital Business and Responsible Artificial Intelligence he is fascinated by 
-  how digital technologies lead to new opportunities and paradigm shifts for firms, public organisations, society and 
-  individuals. He shares his expertise in consulting, workshops, executive education, and as a keynote speaker.
+  Christian Matt is Professor and Co-director of the Institute of Information Systems
+  at the University of Bern. As a researcher, consultant, and expert for Digital Transformation and responsible Artificial Intelligence,
+  he is fascinated by how digital technologies lead to new opportunities and paradigm shifts for firms, public organizations, society, and individuals.
+  Bringing research and practice together, he shares his expertise in consulting, coaching, executive education, and as a keynote speaker.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 
